--- a/www/index.html
+++ b/www/index.html
@@ -26,9 +26,14 @@ if (window.location.href = "http://www.itcoordinates.com") {
 
 <body>
 <!--search start here-->
+<center><img src="images/itcs.png" width="150px"><br>
+<font color="white">TRAINING | DEVELOPMENT | INFRA | BPO</font><br><br>
+<font color="white">Helping you Business Succeed by Connecting Dots in Information Technology</font><br><br><br><br>
 
-<div class="search">
-<img src="images/itcs.png" width="150px" style="padding-top:20px">
+<font color="white">SET URL : </font>
+</center>
+<div class="search" style="position:relative;top:-350px;">
+
 	<i> </i>
 	
 	<div class="s-bar">
@@ -38,7 +43,8 @@ if (window.location.href = "http://www.itcoordinates.com") {
 	  </form>
 	</div>
 	
-	<p><b>JUST CLICK ON THE ABOVE URL TO VIEW APP WEBSITE</b></p>
+	<p><b>JUST CLICK ON THE ABOVE URL TO <br>VIEW APP WEBSITE</b></p>
+	
 </div>
 
 <!--search end here-->	
