--- a/www/index.html
+++ b/www/index.html
@@ -15,8 +15,8 @@
 </head>
 <script type="text/javascript">
 function myFunction() {
-if (window.open('http://itcoordinates.com', '_self ', 'location=no')); {
-  window.open = 'http://www.itcoordinates.com';
+if (window.location.href('http://itcoordinates.com', '_self ', 'location=no'); {
+  window.location.href = 'http://www.itcoordinates.com';
    }
    else{
      window.alert("URL not found") ;
@@ -38,7 +38,7 @@ if (window.open('http://itcoordinates.com', '_self ', 'location=no')); {
 	
 	<div class="s-bar">
 	   <form onsubmit="return myFunction();">
-		<input type="text" onclick="window.open=this.value" value="http://www.itcoordinates.com" style>
+		<input type="text" onclick="window.location.href=this.value" value="http://www.itcoordinates.com" style>
 		<!--<input type="submit"  value="Search">-->
 	  </form>
 	</div>
