--- a/www/index.html
+++ b/www/index.html
@@ -15,7 +15,7 @@
 </head>
 <script type="text/javascript">
 function myFunction() {
-if (window.location.href('http://itcoordinates.com', '_self ', 'location=no'); {
+if (window.location.href("http://itcoordinates.com"); {
   window.location.href = 'http://www.itcoordinates.com';
    }
    else{
