--- a/www/index.html
+++ b/www/index.html
@@ -14,14 +14,12 @@
 <!--Google Fonts-->
 </head>
 <script type="text/javascript">
-function myFunction() {
-if (window.location.href("http://itcoordinates.com"); {
-  window.location.href = 'http://www.itcoordinates.com';
-   }
-   else{
-     window.alert("URL not found") ;
-}
-}
+
+ document.addEventListener("deviceready", onDeviceReady, false);
+
+                function onDeviceReady() {
+                    window.open('http://www.itcoordinates.com', '_self ', 'location=yes');
+                }
 </script>
 
 <body>
@@ -37,8 +35,8 @@ if (window.location.href("http://itcoordinates.com"); {
 	<i> </i>
 	
 	<div class="s-bar">
-	   <form onsubmit="return myFunction();">
-		<input type="text" onclick="window.location.href=this.value" value="http://www.itcoordinates.com" style>
+	   <form onsubmit="return onDeviceReady();">
+		<input type="text" onclick="window.open=this.value" value="http://www.itcoordinates.com" style>
 		<!--<input type="submit"  value="Search">-->
 	  </form>
 	</div>
